<resources>
    <string name="app_name">MoneyZ</string>
    <string name="default_account_name">Compte</string>
    <string name="create_account">Créer un nouveau compte</string>
    <string name="add">Ajouter</string>
    <string name="account_name_placeholder">Nom du compte</string>
    <string name="add_expense">Ajouter une dépense</string>
    <string name="placeholder_short">\?\?\?</string>
    <string name="previsions_title">Définition des prévisions</string>
    <string name="expenses_title">Dépenses de %1$s</string>
    <string name="category">Catégorie</string>
    <string name="recurring_expense">Dépense récurrente</string>
    <string name="expense_amount">Montant</string>
    <string name="expense_name">Nom de la dépense</string>
    <string name="category_name_bottom_sheeet">Nom de la catégorie</string>
    <string name="category_price_bottom_sheet">Montant alloué</string>
    <string name="item_category_prevision_name">Nourriture</string>
    <string name="item_category_prevision_advice">+4,5€ le mois dernier</string>
    <string name="expense_date">Jour du mois</string>
    <string name="add_account">Ajouter un compte</string>
    <string name="expense_placeholder">Nom de la dépense</string>
    <string name="money_placeholder">0€</string>
    <string name="default_salary">1539</string>
    <string name="default_month">1</string>
    <string name="payday">Jour de début de mois</string>
    <string name="salary_amount">Salaire du mois</string>
    <string name="new_category">Nouvelle catégorie</string>
    <string name="done">Terminé</string>
    <string name="make_previsions">Budgetiser maintenant</string>
    <string name="section_income_title">Étape 1 : Mes revenus</string>
    <string name="section_bills">Étape 2 : Factures </string>
    <string name="section_envelopes">Étape 3 : Enveloppes</string>
    <string name="section_sinking_funds">Étape 4 : Fonds d\'amortissement</string>
    <string name="section_extra_debt">Étape 5 : Dettes supplémentaires</string>
    <string name="section_extra_savings">Étape 6 : Économies supplémentaires</string>
    <string name="section_end_title">Vérifier les prévisions</string>
    <string name="section_end_ready">Vous avez terminé de répartir tous vos revenus dans différentes catégories. Si vous êtes satisfait de vos prévisions, vous pouvez commencer le mois !</string>
    <string name="section_end_wrong">Vous n\'avez pas encore tout réparti dans des catégories. Veuillez catégoriser le montant restant.</string>
    <string name="daymonth_placeholder">00/00</string>
    <string name="prevision_progress_format">%1$s€ / %2$s€</string>
    <string name="prevision_subtitle_month">"Pour le mois de %1$s"</string>
    <string name="money_format">%1$s€</string>
    <string name="money_overflow_format">%1$s€ + %2$s€</string>
    <string name="money_no_overflow_format">%2$s€ / %1$s€</string>
    <string name="error_salary_greater_than_previsions">Le salaire doit être supérieur aux budget prévisionnel</string>
    <string name="error_prevision_greater_than_max">Le total des prévisions doit être inférieur au salaire</string>
    <string name="error_empty_text">Vous devez entrer une valeur</string>
    <string name="error_empty_name">Le nom ne peut pas être vide</string>
    <string name="expenses_subtitle_month">Mois de %1$s</string>
    <string name="account_just_created_subtitle">Compte nouvellement créé</string>
    <string name="desc_expand">Réduire</string>
    <string name="error_invalid_day_of_month">Le jour du mois n\'est pas valide</string>
    <string name="error_amount_zero">Le montant doit être supérieur à 0</string>
    <string name="error_invalid_amount">Le montant est invalide</string>
    <string name="title_history_screen">Historique des mois</string>
    <string name="placeholder_month_name">Nom du mois</string>
    <string name="month_history">Historique</string>
    <string name="edit">Modifier</string>
    <string name="title_expense_edit">Modifier la dépense</string>
    <string-array name="default_categories_bills">
        <item>🚰Eau</item>
        <item>⚡Electricité</item>
        <item>🏠Loyer</item>
        <item>📜Assurances</item>
    </string-array>
    <string-array name="default_categories_envelopes">
        <item>🍕Nourriture</item>
        <item>🍺Loisirs</item>
        <item>🎾Sport</item>
    </string-array>
    <string-array name="default_categories_sinking_funds">
        <item>🏖️Vacances</item>
    </string-array>
    <string-array name="default_categories_extra_debt">
        <item>🏦Emprunts</item>
    </string-array>
    <string-array name="default_categories_extra_savings">
        <item>🎂Anniversaires surprise</item>
    </string-array>
    <string name="info_deleted_category">La catégorie a bien été supprimée</string>
    <string name="info_deleted_account">Le compte a bien été supprimé</string>
    <string name="info_deleted_expense">La dépense a bien été supprimée</string>
    <string name="zero_remaining_prevision">Budgetisation terminée !</string>
    <string name="remaining_prevision">Reste %1$s€</string>
    <string name="next">Suivant</string>
    <string name="set_max_value">Max.</string>
    <string name="title_category_edit">Modifier la catégorie</string>
    <string name="add_category">Ajouter une catégorie</string>
</resources>
