<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutContainerCategory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <LinearLayout
        android:id="@+id/layout_category_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/categoryName"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_category_prevision_name"
            android:textColor="@color/material_on_background_emphasis_high_type"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/categoryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_placeholder"
            android:textSize="17sp" />



        <ImageView
            android:id="@+id/button_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_expand"
            android:rotation="180"
            app:srcCompat="@drawable/ic_outline_keyboard_arrow_down_24"
            app:tint="@color/material_on_background_emphasis_high_type" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="5"
        tools:listitem="@layout/item_expense" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/item_category_prevision_advice"
        android:textColor="@color/red"
        android:visibility="gone" />
</LinearLayout>