<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutContainerCategory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/categoryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/item_category_prevision_name"
            android:textColor="@color/material_on_background_emphasis_high_type"
            android:textSize="17sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/categoryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_placeholder"
            android:textSize="17sp" />

        <Button
            android:id="@+id/button_delete_category"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:visibility="gone"
            android:paddingStart="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/item_category_prevision_advice"
        android:textColor="@color/red"
        android:visibility="gone" />
</LinearLayout>